<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.studentmanagementsystem.FormActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/full_name_txt"
        android:theme="@style/app_font"
        />
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="First Name"
            android:theme="@style/app_font"
            android:id="@+id/first_name_form"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Last Name"
            android:theme="@style/app_font"
            android:id="@+id/last_name_form"/>
        
    </LinearLayout>
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="Email"
        android:theme="@style/app_font"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="Email here"
        android:theme="@style/app_font"
        android:id="@+id/email_form"/>
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="School Name"
        android:theme="@style/app_font"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="Enter School Nmae"
        android:theme="@style/app_font"
        android:id="@+id/school_name_form"/>
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/select_gender"
        android:theme="@style/app_font"
        />
    <RadioGroup
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_radioGroup"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:theme="@style/app_font"
            android:textColor="@color/colorWhite"

            />

        <RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            />
        <RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            />
        
        
    </RadioGroup>
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/select_rollNo"
        android:theme="@style/app_font"
        />
    <EditText
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:inputType="number"
        android:id="@+id/roll_no_form"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/buttonstates"
        android:text="@string/submit"
        android:id="@+id/submit_btn"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
