<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.studentmanagementsystem.AddStudentActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/place_holder"

        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.user.studentmanagementsystem.FormActivity">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/full_name_txt"
                        android:theme="@style/app_font"
                        />
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:theme="@style/app_font"
                            android:id="@+id/first_name_txt"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:theme="@style/app_font"
                            android:id="@+id/last_name_txt"/>

                    </LinearLayout>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="Email"
                        android:theme="@style/app_font"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"

                        android:theme="@style/app_font"
                        android:id="@+id/email_txt"/>
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="School Name"
                        android:theme="@style/app_font"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:theme="@style/app_font"
                        android:id="@+id/school_name_txt"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="Gender"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:theme="@style/app_font"
                            android:layout_gravity="center"

                            />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:theme="@style/app_font"
                        android:id="@+id/gender_txt"

                        />



                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:text="Roll no:"
                        android:theme="@style/app_font"
                        />
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"

                        android:id="@+id/roll_no_txt"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonstates"
                        android:text="@string/back_btn"
                        android:id="@+id/back_btn"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_placeholder">
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_recycler"></android.support.v7.widget.RecyclerView>
    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:theme="@style/app_font"
        android:id="@+id/add_student"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_student"
        android:background="@drawable/buttonstates"
        />

    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:theme="@style/app_font"
        android:id="@+id/toogle_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/toogle_btn"
        android:background="@drawable/buttonstates"
        />
    <Spinner
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:theme="@style/app_font"
        android:id="@+id/my_spinner"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ></Spinner>
    </RelativeLayout>
</RelativeLayout>
